--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 header {
     padding: 32px;
     border: 5px solid black;
-    background-color: blueviolet;    
+    background-color: rgb(11, 0, 161);    
 }
 
 header div {
@@ -26,4 +26,41 @@ header div a:hover {
 color: black;
 transition: color 700ms;
 
+}
+
+#box {
+    text-align: center;
+    padding: 30px;
+}    
+
+#box img {
+    border-radius: 50%;
+    border: 5px solid black;
+    margin-bottom: 32px;
+}
+
+#box img{
+    width: 300px;
+    font-weight: 300px;
+}
+
+#box h1 {
+    font-size: 42px;
+    line-height: 52px;
+    font-size: bold;
+}
+
+#box h2 {
+    font-size: 24px;
+    line-height: 42px;
+    font-weight: normal;
+    margin-top: 8px;
+    opacity: 0.8;
+}
+
+#box p {
+    max-width: 500px;
+    margin: 32px auto;
+    font-size: 24px;
+    line-height: 34px;
 }
